# Fledermaus

./: .gitignore  CMakeLists.txt  ConfigReader.h  LICENSE  README.md  fledermaus_config.json  main.cpp
math_utils/: CMakeLists.txt
math_utils/include/: MathUtils.h
mouse_control/: CMakeLists.txt
mouse_control/include/: MouseControl.h
mouse_control/src/: LinuxMouseControl.cpp  WindowsMouseControl.cpp
ultraleap_poller/: CMakeLists.txt
ultraleap_poller/include/: LeapC.h  UltraleapPoller.h
ultraleap_poller/src/: UltraleapPoller.cpp
